--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,7 @@
 
 <web-app>
     <display-name>hello-portlet-test</display-name>
+    <listener>
+        <listener-class>org.exoplatform.container.web.PortalContainerConfigOwner</listener-class>
+    </listener>
 </web-app>
